PYIC-5759: remove error declarations and unused vars